[gd_scene load_steps=21 format=2]

[ext_resource path="res://DialogBox.gd" type="Script" id=1]
[ext_resource path="res://ART/dialog_Box.png" type="Texture" id=2]
[ext_resource path="res://ART/next_icon_2.png" type="Texture" id=3]
[ext_resource path="res://fonts/xolonium-regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ART/back_img.png" type="Texture" id=5]
[ext_resource path="res://ART/Rewa/rewa_fort_1.webp" type="Texture" id=6]
[ext_resource path="res://ART/Chacter/modi_ji-removebg-preview.png" type="Texture" id=7]
[ext_resource path="res://ART/Rewa/rewa_station_2.jpg" type="Texture" id=8]
[ext_resource path="res://ART/Rewa/rewa_fort_3.jpg" type="Texture" id=9]
[ext_resource path="res://ART/Rewa/rewa_fort_2.jpg" type="Texture" id=10]
[ext_resource path="res://ART/Rewa/man-removebg-preview.png" type="Texture" id=11]
[ext_resource path="res://ART/Rewa/girl2.png" type="Texture" id=12]
[ext_resource path="res://ART/Chacter/girl3-removebg-preview.png" type="Texture" id=13]
[ext_resource path="res://ART/back_img2.png" type="Texture" id=14]
[ext_resource path="res://ART/next_img.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 18
outline_size = 1
outline_color = Color( 0.0627451, 0.00784314, 0.00784314, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=4]
resource_name = "IDLE"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -50 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="GamePlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DialogBox" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="RewaStation2" type="Sprite" parent="DialogBox"]
visible = false
position = Vector2( 532, 368 )
scale = Vector2( 1.32806, 1.22321 )
texture = ExtResource( 8 )

[node name="RewaFort1" type="Sprite" parent="DialogBox"]
visible = false
position = Vector2( 509.25, 345.375 )
scale = Vector2( 1.63498, 1.66247 )
texture = ExtResource( 6 )

[node name="RewaFort2" type="Sprite" parent="DialogBox"]
visible = false
position = Vector2( 512, 232.5 )
scale = Vector2( 1.13778, 1.23451 )
texture = ExtResource( 10 )

[node name="RewaFort3" type="Sprite" parent="DialogBox"]
visible = false
position = Vector2( 532.917, 311.436 )
scale = Vector2( 0.712111, 0.735933 )
texture = ExtResource( 9 )

[node name="Girl3" type="Sprite" parent="DialogBox"]
visible = false
position = Vector2( 141, 377 )
scale = Vector2( 1.41073, 1.39119 )
texture = ExtResource( 13 )

[node name="Girl2" type="Sprite" parent="DialogBox"]
visible = false
position = Vector2( 865, 349 )
scale = Vector2( 1.20801, 1.19039 )
texture = ExtResource( 12 )

[node name="Man" type="Sprite" parent="DialogBox"]
visible = false
position = Vector2( 880, 341 )
scale = Vector2( 0.787599, 0.708207 )
texture = ExtResource( 11 )

[node name="ModiJi" type="Sprite" parent="DialogBox"]
visible = false
position = Vector2( 164, 356 )
scale = Vector2( 0.787599, 0.708207 )
texture = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="DialogBox"]
self_modulate = Color( 0.92549, 0.921569, 0.921569, 1 )
anchor_right = 25.601
anchor_bottom = 14.986
margin_left = 64.0
margin_top = 423.0
margin_right = -64.04
margin_bottom = -29.44
texture = ExtResource( 2 )
expand = true

[node name="Name" type="RichTextLabel" parent="DialogBox"]
anchor_left = 12.062
anchor_top = 15.061
anchor_right = 12.062
anchor_bottom = 15.061
margin_left = -430.48
margin_top = -207.44
margin_right = 404.52
margin_bottom = -179.44
custom_fonts/normal_font = SubResource( 1 )
text = "Name"

[node name="Body" type="RichTextLabel" parent="DialogBox"]
anchor_left = 12.487
anchor_top = 15.132
anchor_right = 12.487
anchor_bottom = 15.132
margin_left = -417.48
margin_top = -166.28
margin_right = 417.52
margin_bottom = -44.28
custom_fonts/normal_font = SubResource( 2 )
text = "uiehrpizsuhgo;xjfknh;izseruhjtopzdrijgh;ozsijg;oxdfjghpzwseiothjupeositihjzpseiofgjnzsi;dgjnzwspe9othjdfio;guhs;eotihjzws;eojfhsz;diofghpsoieurfhpozsdjfn;ziosjhftg;zosduhfpozwsthjzsoejfhzs;ioguhzpwsoethjzwseothjoghjzs;doghjizwsopethzpsofhjszd;ofgihjswze;otihjsz;eofihjzspotijzswpeoitjsdogihjszeoitjswzeo0[tijszd[fgoijszdfokiswzhjert[zsifhpszodfhjkjsehfo;zsehrfpiozsdfj;owzeirtjzswefrijhszepotijszdf;oiszhjdf[oszeijrj"

[node name="NextIcon" type="Sprite" parent="DialogBox"]
position = Vector2( 941, 539 )
scale = Vector2( 0.15894, 0.246154 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="DialogBox/NextIcon"]
anims/IDLE = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="Tween" type="Tween" parent="DialogBox"]

[node name="Back" type="Button" parent="DialogBox"]
margin_left = -6.0
margin_top = 550.0
margin_right = 76.0
margin_bottom = 601.0
text = "Back"
icon = ExtResource( 14 )
flat = true
icon_align = 1
expand_icon = true

[node name="Next" type="Button" parent="DialogBox"]
margin_left = 947.0
margin_top = 557.0
margin_right = 1029.0
margin_bottom = 608.0
text = "Next"
icon = ExtResource( 15 )
flat = true
icon_align = 1
expand_icon = true

[node name="Button" type="Button" parent="."]
margin_left = 13.0
margin_top = 19.0
margin_right = 110.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 3 )
text = "Main menu"
icon = ExtResource( 5 )
flat = true
clip_text = true
icon_align = 1
expand_icon = true

[connection signal="visibility_changed" from="DialogBox/RewaStation2" to="DialogBox" method="_on_RewaStation2_visibility_changed"]
[connection signal="tween_completed" from="DialogBox/Tween" to="DialogBox" method="_on_Tween_tween_completed"]
[connection signal="pressed" from="DialogBox/Back" to="DialogBox" method="_on_Back_pressed"]
[connection signal="pressed" from="DialogBox/Next" to="DialogBox" method="_on_Next_pressed"]
[connection signal="pressed" from="Button" to="DialogBox" method="_on_Button_pressed"]
